# manipulator-issac-learning

./: .gitignore  Dockerfile  Dockerfile.sim  Dockerfile.train  README.md  VISION.md  docker-compose.yml  prompt.md  pyproject.toml  readme-vr-test.md  requirements-sim.txt  requirements-train.txt  requirements.txt
assets/: download.py
dataset-pipeline/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
dataset-pipeline/isaac-mimic/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
dataset-pipeline/isaac-mimic/src/dataset_pipeline_mimic/: cli.py  isaaclab.py  paths.py
dataset-pipeline/lerobot-conversion/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
dataset-pipeline/lerobot-conversion/src/dataset_pipeline_convert/: __init__.py  cli.py  convert.py
dataset-pipeline/src/dataset_pipeline/: __init__.py  cli.py  convert.py  hdf5.py  isaaclab.py  paths.py
legacy-phone-teleop/: README.md
scripts/: collect_demos.py  collect_toy_sorting_demos.py  inspect_assets.py  layout_editor.py  list_envs.py  sim_server.py  test_robot.py  toy_sorting_envhub.py  visualize_env.py
sim/: Dockerfile  env.py
sim-vr/: Dockerfile  README.md  bare-install.sh  entrypoint.sh  pyproject.toml  run_teleop.sh
sim-vr/scripts/: fix_xcr_layer.sh  patch_teleop_active.py  start_steam_alvr.sh  start_vr_teleop.sh
sim/assets/: download.py
sim/scripts/: inspect_assets.py  test_robot.py  visualize_env.py
sim/src/manipulator_learning/: __init__.py  envhub.py
sim/src/manipulator_learning/envs/: so_arm101_cfg.py  test_scene_cfg.py  toy_sorting_env.py  toy_sorting_scene_cfg.py
sim/src/manipulator_learning/tasks/: __init__.py
sim/src/manipulator_learning/tasks/toy_sorting/: __init__.py  task_spec.py
src/manipulator_isaac_learning.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/manipulator_learning/: envhub.py  leisaac_tools.py  test_robot.py
src/manipulator_learning/envs/: __init__.py  so_arm101_cfg.py  test_scene_cfg.py  toy_sorting_env.py  toy_sorting_scene_cfg.py  zmq_server.py
teleop-vr/: README.md  bare-install.sh  pyproject.toml  run_record_demos.sh  run_teleop.sh
teleop-vr/scripts/: fix_steamvr_handtracking.py  fix_xcr_layer.sh  isaaclab_session_utils.py  record_demos_with_hotkeys.py  start_steam_alvr.sh  teleop_se3_agent_hotkeys.py
train/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
train/scripts/: collect_demos.py  test_hebi.py
train/src/manipulator_train/: __init__.py
