[project]
name = "manipulator-train"
version = "0.1.0"
description = "LeRobot training for manipulator toy-sorting task"
requires-python = "==3.12.*"
dependencies = [
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "lerobot>=0.4.1",
    "pyzmq>=26.0.0",
    "gymnasium>=0.29.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
