[project]
name = "manipulator-isaac-mimic"
version = "0.1.0"
description = "Isaac Lab Mimic pipeline for annotation and visuomotor dataset generation"
requires-python = "==3.11.*"
dependencies = [
    "h5py>=3.11.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
mimic = [
    "isaaclab[isaacsim,all]==2.3.2.post1",
    "gymnasium>=0.29.0",
    "pyzmq>=26.0.0",
    "msgpack>=1.0.0",
]

[project.scripts]
dataset-mimic = "dataset_pipeline_mimic.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
environments = [
    "sys_platform == 'linux' and python_version == '3.11'",
]
override-dependencies = [
    "pywin32 ; sys_platform == 'win32'",
]

[tool.uv.sources]
isaacsim = [{ index = "nvidia" }]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true
